// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShopCartItem should handler error currentCount 1`] = `
"<div class=\\"shop-cart-item\\">
  <div class=\\"row shop-cart-item__content\\">
    <div class=\\"col-6\\"><span class=\\"shop-cart-item__name\\">
        Суп с пекинской капустой
      </span></div>
    <div class=\\"col-2\\">
      <input-stub id=\\"1\\" value=\\"0\\" type=\\"number\\" min=\\"0\\" class=\\"shop-cart-item__input\\"></input-stub>
      <div class=\\"shop-cart-item__error\\"><span class=\\"shop-cart-item__error-text\\">
          Столько товара на складе нет. Осталось товара: 15 шт.
        </span></div>
    </div>
    <div class=\\"col-2 col-md-3\\"><span class=\\"shop-cart-item__price\\">
        42.8 руб.
        <span class=\\"shop-cart-item__price-count\\">/ шт.</span></span></div>
    <div class=\\"col-2 col-md-1\\">
      <div class=\\"shop-cart-item__delete-btn\\"><span class=\\"shop-cart-item__delete-btn-text\\">
          Удалить
        </span></div>
    </div>
  </div>
</div>"
`;

exports[`ShopCartItem should render empty item 1`] = `
"<div class=\\"shop-cart-item\\">
  <div class=\\"row shop-cart-item__content\\">
    <div class=\\"col-6\\">
      <!---->
    </div>
    <div class=\\"col-2\\">
      <input-stub id=\\"1\\" value=\\"undefined\\" type=\\"number\\" min=\\"0\\" class=\\"shop-cart-item__input\\"></input-stub>
      <!---->
    </div>
    <div class=\\"col-2 col-md-3\\">
      <!---->
    </div>
    <div class=\\"col-2 col-md-1\\">
      <div class=\\"shop-cart-item__delete-btn\\"><span class=\\"shop-cart-item__delete-btn-text\\">
          Удалить
        </span></div>
    </div>
  </div>
</div>"
`;

exports[`ShopCartItem should render item 1`] = `
"<div class=\\"shop-cart-item\\">
  <div class=\\"row shop-cart-item__content\\">
    <div class=\\"col-6\\"><span class=\\"shop-cart-item__name\\">
        Суп с пекинской капустой
      </span></div>
    <div class=\\"col-2\\">
      <input-stub id=\\"1\\" value=\\"0\\" type=\\"number\\" min=\\"0\\" class=\\"shop-cart-item__input\\"></input-stub>
      <!---->
    </div>
    <div class=\\"col-2 col-md-3\\"><span class=\\"shop-cart-item__price\\">
        42.8 руб.
        <span class=\\"shop-cart-item__price-count\\">/ шт.</span></span></div>
    <div class=\\"col-2 col-md-1\\">
      <div class=\\"shop-cart-item__delete-btn\\"><span class=\\"shop-cart-item__delete-btn-text\\">
          Удалить
        </span></div>
    </div>
  </div>
</div>"
`;
